# test_tellus_tif

./: .gitignore  pyproject.toml
src/analytics_basic/: main.py  memory.sh  print_cnn.txt  test.py
src/analytics_basic/testdir/: hypercube_patch_64.npy  py.py  test.py  test_ai.py
src/analytics_basic/testdir/data/: hypercube_patch.html  hypercube_patch_16.npy  hypercube_patch_2.npy  hypercube_patch_32.npy  hypercube_patch_64.npy  hypercube_patch_8.npy
src/extract_reature/: main.py
src/testdir/: reshape.py
