[project]
name = "tellus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
    "ipython>=9.10.0",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "segmentation-models-pytorch>=0.5.0",
    "tifffile>=2026.1.28",
    "timm>=1.0.24",
    "torchview>=0.2.7",
]
